--- a/res/layout/dashboard.xml
+++ b/res/layout/dashboard.xml
@@ -32,6 +32,6 @@
         android:layout_height="wrap_content" >
     </Button>
 
-    <Button android:id="@+id/addNewRiddleButton" />
+    <Button android:id="@+id/addNewRiddleButton" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
 
 </LinearLayout>
